cmake_minimum_required(VERSION 2.8.3)
project(ds-algo)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
find_package(boost REQUIRED)
include_directories(${Boost_INCLUDE_DIR})
add_executable(ed src/edit_distance.cpp)
add_executable(phoenix src/boost_phoenix.cpp)
add_executable(p_vs_lambda src/phoenix_vs_lambda.cpp)
target_link_libraries(p_vs_lambda ${Boost_LIBRAIRES})
target_link_libraries(phoenix ${Boost_LIBRARIES})
add_executable(func src/boost_function.cpp)
target_link_libraries(func ${Boost_LIBRARIES})
add_executable(func2 src/boost_function2.cpp)
target_link_libraries(func2 ${Boost_LIBRARIES})